Approved checkin for bug 76125, cleanup usage of pldhashtable in nsCacheService.cpp. r=gagan, sr=brendan, a=asa.